@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2025 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -39,10 +39,7 @@ import org.eclipse.ui.internal.WorkbenchPlugin;
 import org.eclipse.ui.internal.ide.ChooseWorkspaceDialog;
 import org.jkiss.code.NotNull;
 import org.jkiss.code.Nullable;
-import org.jkiss.dbeaver.DBeaverPreferences;
-import org.jkiss.dbeaver.Log;
-import org.jkiss.dbeaver.LogOutputStream;
-import org.jkiss.dbeaver.ModelPreferences;
+import org.jkiss.dbeaver.*;
 import org.jkiss.dbeaver.core.DBeaverActivator;
 import org.jkiss.dbeaver.core.DesktopPlatform;
 import org.jkiss.dbeaver.core.DesktopUI;
@@ -52,12 +49,12 @@ import org.jkiss.dbeaver.model.app.DBPPlatform;
 import org.jkiss.dbeaver.model.app.DBPWorkspace;
 import org.jkiss.dbeaver.model.cli.CLIConstants;
 import org.jkiss.dbeaver.model.cli.CLIProcessResult;
+import org.jkiss.dbeaver.model.impl.app.ApplicationRegistry;
+import org.jkiss.dbeaver.model.impl.app.BaseApplicationImpl;
 import org.jkiss.dbeaver.model.impl.app.BaseWorkspaceImpl;
 import org.jkiss.dbeaver.model.preferences.DBPPreferenceStore;
 import org.jkiss.dbeaver.model.rcp.DesktopApplicationImpl;
-import org.jkiss.dbeaver.model.runtime.DBRProgressMonitor;
 import org.jkiss.dbeaver.registry.ApplicationPolicyProvider;
-import org.jkiss.dbeaver.registry.BasePlatformImpl;
 import org.jkiss.dbeaver.registry.SWTBrowserRegistry;
 import org.jkiss.dbeaver.registry.timezone.TimezoneRegistry;
 import org.jkiss.dbeaver.registry.updater.VersionDescriptor;
@@ -71,15 +68,21 @@ import org.jkiss.dbeaver.ui.app.standalone.update.VersionUpdateDialog;
 import org.jkiss.dbeaver.utils.GeneralUtils;
 import org.jkiss.dbeaver.utils.RuntimeUtils;
 import org.jkiss.dbeaver.utils.SystemVariablesResolver;
-import org.jkiss.utils.*;
+import org.jkiss.utils.ArrayUtils;
+import org.jkiss.utils.CommonUtils;
+import org.jkiss.utils.IOUtils;
+import org.jkiss.utils.StandardConstants;
 import org.osgi.framework.Version;
 
 import java.io.*;
 import java.lang.reflect.Field;
+import java.net.URI;
 import java.net.URL;
-import java.nio.file.*;
+import java.nio.file.FileVisitResult;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
-import java.util.Comparator;
 import java.util.Properties;
 import java.util.Set;
 import java.util.stream.Stream;
@@ -97,16 +100,14 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
     public static final String WORKSPACE_DIR_4 = "${user.home}/.dbeaver4"; //$NON-NLS-1$
 
     public static final String[] WORKSPACE_DIR_PREVIOUS = {
-        WORKSPACE_DIR_4,
-        WORKSPACE_DIR_LEGACY};
+            WORKSPACE_DIR_4,
+            WORKSPACE_DIR_LEGACY};
 
     static final String VERSION_PROP_PRODUCT_NAME = "product-name";
     static final String VERSION_PROP_PRODUCT_VERSION = "product-version";
 
-    private static final String PROP_EXIT_DATA = IApplicationContext.EXIT_DATA_PROPERTY; //$NON-NLS-1$
     private static final String PROP_EXIT_CODE = "eclipse.exitcode"; //$NON-NLS-1$
 
-    public static final String DEFAULT_WORKSPACE_FOLDER = "workspace6";
     public static final String DEFAULT_WORKSPACES_FILE = ".workspaces";
     public static final String POLICY_WD_CHECK_SUPPRESS = "policy.wd.check.disabled"; //$NON-NLS-1$
 
@@ -115,8 +116,17 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
     private static final String RESET_WORKSPACE_CONFIGURATION = "reset_workspace_configuration";
     private static final String DEFAULT_PROJECT_NAME = "General";
 
+    /**
+     * Specified in {@code dbeaver.ini} as a JVM parameter during packaging. Possible values are:
+     * <ul>
+     *     <li>{@code zip}, {@code exe}, {@code msstore} on Windows;</li>
+     *     <li>{@code deb}, {@code rpm} on Linux;</li>
+     *     <li>{@code dmg} on macOS.</li>
+     * </ul>
+     */
+    public static final String PROP_DISTRIBUTION_TYPE = "dbeaver.distribution.type";
+
     private final Path FILE_WITH_WORKSPACES;
-    private final String WORKSPACE_DIR_CURRENT;
 
     static boolean WORKSPACE_MIGRATED = false;
 
@@ -139,29 +149,21 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
     private long lastUserActivityTime = -1;
 
     public DBeaverApplication() {
-        this(BasePlatformImpl.DBEAVER_DATA_DIR, DEFAULT_WORKSPACE_FOLDER, DEFAULT_WORKSPACES_FILE);
+        this(BaseApplicationImpl.DBEAVER_DATA_DIR, DEFAULT_WORKSPACE_FOLDER, DEFAULT_WORKSPACES_FILE);
     }
 
-    protected DBeaverApplication(String defaultWorkspaceLocation, String defaultAppWorkspaceName, String defaultWorkspacesFile) {
-
-        // Explicitly set UTF-8 as default file encoding
-        // In some places Eclipse reads this property directly.
-        //System.setProperty(StandardConstants.ENV_FILE_ENCODING, GeneralUtils.UTF8_ENCODING);
-
-        // Detect default workspace location
-        // Since 6.1.3 it is different for different OSes
-        // Windows: %AppData%/DBeaverData
-        // MacOS: ~/Library/DBeaverData
-        // Linux: $XDG_DATA_HOME/DBeaverData
-        String workingDirectory = RuntimeUtils.getWorkingDirectory(defaultWorkspaceLocation);
-
-        // Workspace dir
-        WORKSPACE_DIR_CURRENT = new File(workingDirectory, defaultAppWorkspaceName).getAbsolutePath();
-        FILE_WITH_WORKSPACES = Paths.get(workingDirectory, defaultWorkspacesFile); //$NON-NLS-1$
+    protected DBeaverApplication(
+            @NotNull String defaultWorkspaceLocation,
+            @NotNull String defaultAppWorkspaceName,
+            @NotNull String defaultWorkspacesFile
+    ) {
+        super(defaultWorkspaceLocation, defaultAppWorkspaceName);
+        FILE_WITH_WORKSPACES = getGlobalDataPath().resolve(defaultWorkspacesFile);
     }
 
     /**
      * Gets singleton instance of DBeaver application
+     *
      * @return application or null if application wasn't started or was stopped.
      */
     public static DBeaverApplication getInstance() {
@@ -183,17 +185,12 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
     @Override
     public Object start(IApplicationContext context) {
         instance = this;
+        // hide standard Eclipse exit message if exit code is not OK (otherwise it may be confusing)
+        System.setProperty(ECLIPSE_EXIT_DATA, "");
 
         var args = preprocessCommandLine();
         Location instanceLoc = Platform.getInstanceLocation();
-
-        String defaultHomePath = getDefaultInstanceLocation();
-
-        if (!isWorkspaceSwitchingAllowed() && !WORKSPACE_DIR_CURRENT.equals(defaultHomePath)) {
-            log.error("Workspace switching is not allowed when participating in the early access program. Exiting "
-                + GeneralUtils.getProductName() + ".");
-            return IApplication.EXIT_OK;
-        }
+        Path defaultHomePath = getDefaultInstanceLocation();
 
         boolean ideWorkspaceSet = setIDEWorkspace(instanceLoc);
 
@@ -220,8 +217,13 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
                     }
                 }
             } catch (Exception e) {
-                e.printStackTrace();
+                e.printStackTrace(System.out);
             }
+        }
+        try {
+            setWorkspacePath(RuntimeUtils.getLocalPathFromURL(instanceLoc.getURL()));
+        } catch (IOException e) {
+            log.error("Error settings workspace path", e);
         }
 
         loadStartupActions(instanceLoc);
@@ -229,23 +231,42 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
         // Register core components
         initializeApplicationServices();
 
+        final Runtime runtime = Runtime.getRuntime();
+
+        // Debug logger
+        initDebugWriter();
+
+        try {
+            DBWorkbench.addInitializeHook((platform) -> {
+                try {
+                    initializeApplication();
+                } catch (Exception e) {
+                    showMessageBox("Error initializing application", e.getMessage(), SWT.ICON_ERROR);
+                    throw e;
+                }
+            });
+        } catch (DBException e) {
+            log.error("Error initializing application", e);
+            return IApplication.EXIT_OK;
+        }
+
         // Custom parameters
         try {
             headlessMode = true;
             try {
                 CLIProcessResult cliProcessResult = DBeaverCommandLine.getInstance()
-                    .executeCommandLineCommands(null, false, false, args);
+                        .executeCommandLineCommands(null, false, false, args);
                 if (cliProcessResult.getPostAction() == CLIProcessResult.PostAction.SHUTDOWN) {
                     if (!CommonUtils.isEmpty(cliProcessResult.getOutput())) {
                         for (String res : cliProcessResult.getOutput()) {
                             System.out.println(res);
                         }
                     }
-                    return IApplication.EXIT_OK;
+                    return cliProcessResult.getExitCode();
                 }
             } catch (Exception e) {
                 log.error("Error processing command line parameters", e);
-                return IApplication.EXIT_OK;
+                return CLIConstants.EXIT_CODE_ERROR;
             }
         } finally {
             headlessMode = false;
@@ -256,13 +277,6 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
             return IApplication.EXIT_OK;
         }
 
-        final Runtime runtime = Runtime.getRuntime();
-
-        initializeConfiguration();
-
-        // Debug logger
-        // initDebugWriter();
-
         // clear log
         clearLogFile();
 
@@ -272,6 +286,17 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
         log.debug("Install path: '" + SystemVariablesResolver.getInstallPath() + "'"); //$NON-NLS-1$ //$NON-NLS-2$
         log.debug("Instance path: '" + instanceLoc.getURL() + "'"); //$NON-NLS-1$ //$NON-NLS-2$
         log.debug("Memory available " + (runtime.totalMemory() / (1024 * 1024)) + "Mb/" + (runtime.maxMemory() / (1024 * 1024)) + "Mb");
+
+        try {
+            DBWorkbench.getPlatform();
+        } catch (Throwable e) {
+            if (e instanceof DBRuntimeException re) {
+                e = re.getCause();
+            }
+            log.debug(e);
+            showMessageBox("Error initializing platform", CommonUtils.getAllExceptionMessages(e), SWT.ICON_ERROR);
+            return IApplication.EXIT_OK;
+        }
 
         // Write version info
         writeWorkspaceInfo();
@@ -286,10 +311,14 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
             SWTBrowserRegistry.overrideBrowser();
         }
 
-        DBWorkbench.getPlatform();
+        if (!isWorkspaceSwitchingAllowed() && !getWorkspacePath().equals(defaultHomePath)) {
+            log.error("Workspace switching is not allowed when participating in the early access program. Exiting "
+                    + GeneralUtils.getProductName() + ".");
+            return IApplication.EXIT_OK;
+        }
 
+        log.debug("\tPatch workbench configuration");
         WorkbenchPatcher.patchWorkbenchXmi(instanceLoc);
-        initializeApplication();
 
         // Run instance server
         try {
@@ -301,7 +330,7 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
         TimezoneRegistry.overrideTimezone();
 
         if (CommonUtils.isEmpty(System.getProperty(GeneralUtils.PROP_TRUST_STORE))
-            && CommonUtils.isEmpty(System.getProperty(GeneralUtils.PROP_TRUST_STORE_TYPE))
+                && CommonUtils.isEmpty(System.getProperty(GeneralUtils.PROP_TRUST_STORE_TYPE))
         ) {
             DBPPreferenceStore preferenceStore = DBWorkbench.getPlatform().getPreferenceStore();
             if (RuntimeUtils.isWindows() && preferenceStore.getBoolean(ModelPreferences.PROP_USE_WIN_TRUST_STORE_TYPE)) {
@@ -311,11 +340,10 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
 
         // Prefs default
         PlatformUI.getPreferenceStore().setDefault(
-            IWorkbenchPreferenceConstants.KEY_CONFIGURATION_ID,
-            ApplicationWorkbenchAdvisor.DBEAVER_SCHEME_NAME);
+                IWorkbenchPreferenceConstants.KEY_CONFIGURATION_ID,
+                ApplicationWorkbenchAdvisor.DBEAVER_SCHEME_NAME);
         try {
             log.debug("Run workbench");
-            getDisplay();
             int returnCode = PlatformUI.createAndRunWorkbench(display, createWorkbenchAdvisor());
 
             // Copy-pasted from IDEApplication
@@ -331,7 +359,7 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
             // if the exit code property has been set to the relaunch code, then
             // return that code now, otherwise this is a normal restart
             return EXIT_RELAUNCH.equals(Integer.getInteger(PROP_EXIT_CODE)) ? EXIT_RELAUNCH
-                : EXIT_RESTART;
+                    : EXIT_RESTART;
 
         } catch (Throwable e) {
             log.debug("Internal error in workbench lifecycle", e);
@@ -360,7 +388,11 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
                 break;
             }
         }
-        DBeaverCommandLine.getInstance().preprocessCommandLine(args);
+        try {
+            DBeaverCommandLine.getInstance().preprocessCommandLine(args);
+        } catch (DBException e) {
+            log.error("Error preprocessing command line", e);
+        }
         return args;
     }
 
@@ -371,7 +403,7 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
             isReadOnlyField.set(instanceLoc, true);
         } catch (Throwable e) {
             // ignore
-            e.printStackTrace();
+            e.printStackTrace(System.err);
         }
     }
 
@@ -383,15 +415,14 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
             return false;
         }
         String lastWorkspace = DBeaverWorkspaces.fetchRecentWorkspaces(this, instanceLoc).getFirst();
-        if (!WORKSPACE_DIR_CURRENT.equals(lastWorkspace)) {
+        if (!CommonUtils.isEmpty(lastWorkspace)) {
             try {
-                final URL selectedWorkspaceURL = new URL(
-                    "file",  //$NON-NLS-1$
-                    null,
-                    lastWorkspace);
-                instanceLoc.set(selectedWorkspaceURL, true);
-
-                return true;
+                Path lwPath = Path.of(lastWorkspace);
+                if (!getWorkspacePath().equals(lwPath)) {
+                    final URL selectedWorkspaceURL = lwPath.toUri().toURL();
+                    instanceLoc.set(selectedWorkspaceURL, true);
+                    return true;
+                }
             } catch (Exception e) {
                 log.debug("Can't set IDE workspace to '" + lastWorkspace + "'", e);
             }
@@ -408,11 +439,6 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
     }
 
     @NotNull
-    public Path getDefaultWorkingFolder() {
-        return Path.of(WORKSPACE_DIR_CURRENT);
-    }
-
-    @NotNull
     @Override
     public Class<? extends DBPPlatform> getPlatformClass() {
         return DesktopPlatform.class;
@@ -423,27 +449,27 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
         return isHeadlessMode() ? ConsoleUserInterface.class : DesktopUI.class;
     }
 
-    public String getDefaultInstanceLocation() {
-        String defaultHomePath = WORKSPACE_DIR_CURRENT;
+    public Path getDefaultInstanceLocation() {
+        Path defaultHomePath = getWorkspacePath();
         Location instanceLoc = Platform.getInstanceLocation();
         if (instanceLoc.isSet()) {
             try {
-                defaultHomePath = RuntimeUtils.getLocalFileFromURL(instanceLoc.getURL()).getAbsolutePath();
+                defaultHomePath = RuntimeUtils.getLocalFileFromURL(instanceLoc.getURL());
             } catch (IOException e) {
                 System.err.println("Unable to resolve workspace location " + instanceLoc);
-                e.printStackTrace();
+                e.printStackTrace(System.err);
             }
         }
         return defaultHomePath;
     }
 
-    private void updateSplashHandler() {
+    public Shell updateSplashHandler() {
         if (ArrayUtils.contains(Platform.getApplicationArgs(), "-nosplash")) {
-            return;
+            return null;
         }
         try {
             // look and see if there's a splash shell we can parent off of
-            Shell shell = WorkbenchPlugin.getSplashShell(display);
+            Shell shell = WorkbenchPlugin.getSplashShell(getDisplay());
             if (shell != null) {
                 // should set the icon and message for this shell to be the
                 // same as the chooser dialog - this will be the guy that lives in
@@ -451,15 +477,20 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
                 // with no message.
                 shell.setText(ChooseWorkspaceDialog.getWindowTitle());
                 shell.setImages(Window.getDefaultImages());
+                return shell;
             }
         } catch (Throwable e) {
             e.printStackTrace(System.err);
             System.err.println("Error updating splash shell");
         }
-
+        return null;
     }
 
-    protected void initializeConfiguration() {
+    /**
+     * May be overrided in implementors
+     */
+    protected void initializeApplication() throws DBException {
+        // Configure network
         ModelPreferences.IPType stack = ModelPreferences.IPType.getPreferredStack();
         if (stack != ModelPreferences.IPType.AUTO) {
             System.setProperty("java.net.preferIPv4Stack", String.valueOf(stack == ModelPreferences.IPType.IPV4));
@@ -472,17 +503,13 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
         if (debugNetworkConnections) {
             System.setProperty("javax.net.debug", "all");
         }
-    }
 
-    /**
-     * May be overrided in implementors
-     */
-    protected void initializeApplication() {
+        // Policy
         if (ApplicationPolicyProvider.getInstance().isPolicyEnabled(POLICY_WD_CHECK_SUPPRESS)) {
             try {
                 WindowsDefenderConfigurator.savePreference(
-                    ConfigurationScope.INSTANCE,
-                    WindowsDefenderConfigurator.PREFERENCE_STARTUP_CHECK_SKIP, "true"); //$NON-NLS-1$
+                        ConfigurationScope.INSTANCE,
+                        WindowsDefenderConfigurator.PREFERENCE_STARTUP_CHECK_SKIP, "true"); //$NON-NLS-1$
             } catch (Exception e) {
                 log.debug(e);
             }
@@ -491,7 +518,7 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
 
     private Display getDisplay() {
         if (display == null) {
-            log.debug("Create display");
+            log.debug("\tCreate display");
             // Set display name at the very beginning (#609)
             // This doesn't initialize display - just sets default title
             Display.setAppName(GeneralUtils.getProductName());
@@ -499,7 +526,6 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
             display = Display.getCurrent();
             if (display == null) {
                 display = PlatformUI.createDisplay();
-                overrideThemeValues();
             }
 
             // Check for resource leaks
@@ -510,27 +536,8 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
         return display;
     }
 
-    /**
-     * See {@code org.jkiss.dbeaver.ui.swt.linux}
-     */
-    private void overrideThemeValues() {
-        if (!RuntimeUtils.isLinux() || System.getProperty("org.eclipse.swt.internal.gtk.noThemingFixes") != null) {
-            return;
-        }
-        try {
-            BeanUtils.invokeStaticMethod(
-                Class.forName("org.eclipse.swt.GtkCssHelper"),
-                "overrideThemeValues",
-                new Class[] {},
-                new Object[] {}
-            );
-        } catch (Throwable e) {
-            log.error("Error overriding theme values", e);
-        }
-    }
-
     private void addIdleListeners() {
-        int [] events = {SWT.KeyDown, SWT.KeyUp, SWT.MouseDown, SWT.MouseMove, SWT.MouseUp, SWT.MouseWheel};
+        int[] events = {SWT.KeyDown, SWT.KeyUp, SWT.MouseDown, SWT.MouseMove, SWT.MouseUp, SWT.MouseWheel};
         Listener idleListener = event -> lastUserActivityTime = System.currentTimeMillis();
         for (int event : events) {
             display.addFilter(event, idleListener);
@@ -538,11 +545,10 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
     }
 
     private boolean setDefaultWorkspacePath(Location instanceLoc) {
-        String defaultHomePath = WORKSPACE_DIR_CURRENT;
-        final Path homeDir = Path.of(defaultHomePath);
+        Path defaultHomePath = getWorkspacePath();
         try {
-            if (!Files.exists(homeDir) || isEmptyFolder(homeDir)) {
-                if (!tryMigrateFromPreviousVersion(homeDir)) {
+            if (!Files.exists(defaultHomePath) || isEmptyFolder(defaultHomePath)) {
+                if (!tryMigrateFromPreviousVersion(defaultHomePath)) {
                     return false;
                 }
             }
@@ -551,10 +557,7 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
         }
         try {
             // Make URL manually because file.toURI().toURL() produces bad path (with %20).
-            final URL defaultHomeURL = new URL(
-                "file",  //$NON-NLS-1$
-                null,
-                defaultHomePath);
+            final URL defaultHomeURL = defaultHomePath.toUri().toURL();
             boolean keepTrying = true;
             while (keepTrying) {
                 if (instanceLoc.isLocked() || !instanceLoc.set(defaultHomeURL, true)) {
@@ -565,11 +568,11 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
                     } else {
                         // Can't lock specified path
                         int msgResult = showMessageBox(
-                            "DBeaver - Can't lock workspace",
-                            "Can't lock workspace at " + defaultHomePath + ".\n" +
-                                "It seems that you have another DBeaver instance running.\n" +
-                                "You may ignore it and work without lock but it is recommended to shutdown previous instance otherwise you may corrupt workspace data.",
-                            SWT.ICON_WARNING | SWT.IGNORE | SWT.RETRY | SWT.ABORT);
+                                "DBeaver - Can't lock workspace",
+                                "Can't lock workspace at " + defaultHomePath + ".\n" +
+                                        "It seems that you have another DBeaver instance running.\n" +
+                                        "You may ignore it and work without lock but it is recommended to shutdown previous instance otherwise you may corrupt workspace data.",
+                                SWT.ICON_WARNING | SWT.IGNORE | SWT.RETRY | SWT.ABORT);
 
                         switch (msgResult) {
                             case SWT.ABORT:
@@ -609,34 +612,27 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
             oldDir = GeneralUtils.replaceSystemPropertyVariables(oldDir);
             final Path oldWorkspaceDir = Path.of(oldDir);
             if (Files.exists(oldWorkspaceDir) &&
-                Files.exists(GeneralUtils.getMetadataFolder(oldWorkspaceDir))) {
+                    Files.exists(GeneralUtils.getMetadataFolder(oldWorkspaceDir))) {
                 previousVersionWorkspaceDir = oldWorkspaceDir;
                 break;
             }
         }
         if (previousVersionWorkspaceDir != null) {
             DBeaverSettingsImporter importer = new DBeaverSettingsImporter(this, getDisplay());
-            if (!importer.migrateFromPreviousVersion(previousVersionWorkspaceDir.toFile(), homeDir.toFile())) {
-                return false;
-            }
+            return importer.migrateFromPreviousVersion(previousVersionWorkspaceDir.toFile(), homeDir.toFile());
         }
         return true;
     }
 
     private void writeWorkspaceInfo() {
-        Path defaultDir = getDefaultWorkingFolder();
-        Path metadataFolder;
-        if (defaultDir != null) {
-            metadataFolder = defaultDir.resolve(DBPWorkspace.METADATA_FOLDER);
-            if (!Files.exists(metadataFolder)) {
-                try {
-                    Files.createDirectories(metadataFolder);
-                } catch (IOException e) {
-                    System.err.println("Error creating metadata folder '" + metadataFolder + "': " + e.getMessage());
-                }
+        Path defaultDir = getWorkspacePath();
+        Path metadataFolder = defaultDir.resolve(DBPWorkspace.METADATA_FOLDER);
+        if (!Files.exists(metadataFolder)) {
+            try {
+                Files.createDirectories(metadataFolder);
+            } catch (IOException e) {
+                System.err.println("Error creating metadata folder '" + metadataFolder + "': " + e.getMessage());
             }
-        } else {
-            metadataFolder = GeneralUtils.getMetadataFolder();
         }
         Properties props = BaseWorkspaceImpl.readWorkspaceInfo(metadataFolder);
         props.setProperty(VERSION_PROP_PRODUCT_NAME, GeneralUtils.getProductName());
@@ -684,7 +680,7 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
 
             log.debug("DBeaver shutdown completed"); //$NON-NLS-1$
             clearPluginLaunch();
-//            stopDebugWriter();
+            //stopDebugWriter();
         }
     }
 
@@ -759,7 +755,6 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
     }
 
     @Nullable
-    @Override
     public IInstanceController getInstanceServer() {
         return instanceServer;
     }
@@ -812,7 +807,7 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
     }
 
     @Override
-    public String getInfoDetails(DBRProgressMonitor monitor) {
+    public String getInfoDetails() {
         return null;
     }
 
@@ -836,11 +831,35 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
 
     public void notifyVersionUpgrade(@NotNull Version currentVersion, @NotNull VersionDescriptor newVersion, boolean showSkip) {
         VersionUpdateDialog dialog = new VersionUpdateDialog(
-            PlatformUI.getWorkbench().getActiveWorkbenchWindow().getShell(),
-            currentVersion,
-            newVersion,
-            showSkip);
+                PlatformUI.getWorkbench().getActiveWorkbenchWindow().getShell(),
+                currentVersion,
+                newVersion,
+                showSkip);
         dialog.open();
+    }
+
+    /**
+     * Computes a download URL for the latest version of this installation.
+     *
+     * @param version version descriptor with base download URL
+     * @return URL to download latest version or {@code null} if it can't be computed for current platform
+     */
+    @Nullable
+    public URI getLatestVersionDownloadUrl(@NotNull VersionDescriptor version) {
+        var app = ApplicationRegistry.getInstance().getApplication();
+        var url = URI.create(version.getDownloadURL());
+
+        if (RuntimeUtils.isWindows()) {
+            if ("zip".equals(System.getProperty(PROP_DISTRIBUTION_TYPE))) {
+                return url.resolve(app.getId() + "-latest-win32.win32." + Platform.getOSArch() + ".zip");
+            } else {
+                return url.resolve(app.getId() + "-latest-" + Platform.getOSArch() + "-setup.exe");
+            }
+        } else if (RuntimeUtils.isMacOS()) {
+            return url.resolve(app.getId() + "-latest-macos-" + Platform.getOSArch() + ".dmg");
+        } else {
+            return null;
+        }
     }
 
     public void setResetUserPreferencesOnRestart(boolean resetUserPreferencesOnRestart) {
@@ -905,8 +924,8 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
     }
 
     private void processStartupActions(
-        @NotNull Path instancePath,
-        @NotNull Set<String> actions
+            @NotNull Path instancePath,
+            @NotNull Set<String> actions
     ) throws Exception {
         final boolean resetUserPreferences = actions.contains(RESET_USER_PREFERENCES);
         final boolean resetWorkspaceConfiguration = actions.contains(RESET_WORKSPACE_CONFIGURATION);
