@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2025 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -71,8 +71,8 @@ import org.jkiss.utils.ArrayUtils;
 import org.jkiss.utils.CommonUtils;
 
 import java.lang.reflect.InvocationTargetException;
-import java.util.List;
 import java.util.*;
+import java.util.List;
 
 /**
  * EditForeignKeyPage
@@ -597,8 +597,11 @@ public class EditForeignKeyPage extends BaseObjectEditPage {
             return;
         }
         DBVEntity vRefEntity = DBVUtils.getVirtualEntity(curRefTable, true);
-        assert vRefEntity != null;
-        DBVEntityConstraint constraint = vRefEntity.getBestIdentifier();
+        DBVEntityConstraint constraint = vRefEntity == null ? null : vRefEntity.getBestIdentifier();
+        if (constraint == null) {
+            log.error("No best table identifier found");
+            return;
+        }
 
         EditConstraintPage page = new EditConstraintPage(
             ObjectEditorMessages.dialog_struct_edit_fk_page_title,
@@ -643,7 +646,7 @@ public class EditForeignKeyPage extends BaseObjectEditPage {
             Label controlLabel = UIUtils.createControlLabel(
                 tableGroup, ObjectEditorMessages.edit_foreign_key_page_create_schema_container);
             final CSmartCombo<DBNDatabaseNode> schemaCombo = new CSmartCombo<>(tableGroup, SWT.BORDER, labelProvider);
-            schemaCombo.setLayoutData(new GridData(GridData.HORIZONTAL_ALIGN_BEGINNING));
+            schemaCombo.setLayoutData(new GridData(GridData.FILL_HORIZONTAL));
 
             DBNDatabaseNode selectedNode = null;
             for (DBNNode node : ArrayUtils.safeArray(schemaContainerNode.getChildren(new VoidProgressMonitor()))) {
@@ -656,7 +659,7 @@ public class EditForeignKeyPage extends BaseObjectEditPage {
             }
             List<DBNDatabaseNode> allContainers = schemaCombo.getItems();
             if (!allContainers.isEmpty()) {
-                String nodeType = allContainers.get(0).getMeta().getNodeTypeLabel(foreignKey.getDataSource(), null);
+                String nodeType = allContainers.getFirst().getMeta().getNodeTypeLabel(foreignKey.getDataSource(), null);
                 if (!CommonUtils.isEmpty(nodeType)) {
                     controlLabel.setText(nodeType);
                 }
@@ -673,9 +676,11 @@ public class EditForeignKeyPage extends BaseObjectEditPage {
                     // We need to find table container node
                     // This node is a child of schema node and has the same meta as our original table parent node
                     DBNDatabaseNode schemaNode = schemaCombo.getSelectedItem();
-                    DBNDatabaseNode newContainerNode = getTablesNode(schemaNode);
-                    if (newContainerNode != null) {
-                        loadTableList(newContainerNode);
+                    if (schemaNode != null) {
+                        DBNDatabaseNode newContainerNode = getTablesNode(schemaNode);
+                        if (newContainerNode != null) {
+                            loadTableList(newContainerNode);
+                        }
                     }
                 }
             });
@@ -716,7 +721,7 @@ public class EditForeignKeyPage extends BaseObjectEditPage {
         return newContainerNode;
     }
 
-    private void createContainerSelector(Composite tableGroup) throws DBException {
+    private void createContainerSelector(Composite tableGroup) {
         ObjectContainerSelectorPanel containerPanel = new ObjectContainerSelectorPanel(
             tableGroup,
             this.getOwnerProject(),
@@ -747,7 +752,7 @@ public class EditForeignKeyPage extends BaseObjectEditPage {
             }
 
             @Override
-            protected void setSelectedNode(DBNDatabaseNode node) {
+            protected void setSelectedNode(@NotNull DBNDatabaseNode node) {
                 ownerContainerNode = node;
                 if (ownerContainerNode == null) {
                     setContainerInfo(null);
@@ -1301,10 +1306,11 @@ public class EditForeignKeyPage extends BaseObjectEditPage {
             this.columnName = fkColumnInfo.getCustomName();
         }
 
+        @NotNull
         @Override
-        protected Composite createDialogArea(Composite parent) {
+        protected Composite createDialogArea(@NotNull Composite parent) {
             Composite composite = super.createDialogArea(parent);
-            Group group = UIUtils.createControlGroup(composite, "New column options", 2, GridData.FILL_HORIZONTAL, 300);
+            Composite group = UIUtils.createTitledComposite(composite, "New column options", 2, GridData.FILL_HORIZONTAL, 300);
             Text columnNameText = UIUtils.createLabelText(group, "Column name", fkColumnInfo.getCustomName(), SWT.BORDER);
             columnNameText.addModifyListener(e -> columnName = columnNameText.getText());
             Button notNullCheck = UIUtils.createCheckbox(group, "Not Null", "Make new column required", false, 2);
